--- a/MyAssignment3_ws/src/tiago_service/package.xml
+++ b/MyAssignment3_ws/src/tiago_service/package.xml
@@ -48,7 +48,9 @@
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
+
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>actionlib</build_depend>
   <build_depend>aruco_msgs</build_depend>
   <build_depend>control_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
@@ -63,6 +65,9 @@
   <build_depend>shape_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
+  <build_depend>rosprolog</build_depend>
+  <build_depend>myservice</build_depend>
+
   <build_export_depend>aruco_msgs</build_export_depend>
   <build_export_depend>control_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
@@ -76,6 +81,9 @@
   <build_export_depend>shape_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>trajectory_msgs</build_export_depend>
+
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>actionlib</exec_depend>
   <exec_depend>aruco_msgs</exec_depend>
   <exec_depend>control_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
@@ -89,7 +97,8 @@
   <exec_depend>shape_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
-
+  <exec_depend>rosprolog</exec_depend>
+  <exec_depend>myservice</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
